"Completed async logic"