@@ -1,19 +1,19 @@
 package TelegramBot.TumblrTagTracker.services;
 
-
-
 import TelegramBot.TumblrTagTracker.dto.TumblrPostDTO;
+import TelegramBot.TumblrTagTracker.util.ContentExtractor;
 import com.tumblr.jumblr.JumblrClient;
 import com.tumblr.jumblr.types.*;
 import io.github.resilience4j.circuitbreaker.annotation.CircuitBreaker;
+import io.github.resilience4j.ratelimiter.RequestNotPermitted;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import org.springframework.web.servlet.view.BeanNameViewResolver;
 
 import java.util.*;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 
 @Service
@@ -25,42 +25,48 @@ public class TumblrService {
     private final RedisCacheService cacheService;
     private final TumblrRateLimiterService rateLimiter;
     private final PostTrackingService postTrackingService;
+    private final ContentExtractor contentExtractor;
 
     private final int FETCH_LIMIT = 20;
 
-
     @Autowired
-    public TumblrService(JumblrClient tumblrClient, RedisCacheService cacheService, TumblrRateLimiterService rateLimiter, PostTrackingService postTrackingService) {
+    public TumblrService(JumblrClient tumblrClient, RedisCacheService cacheService,
+                         TumblrRateLimiterService rateLimiter, PostTrackingService postTrackingService,
+                         ContentExtractor contentExtractor) {
         this.tumblrClient = tumblrClient;
         this.cacheService = cacheService;
         this.rateLimiter = rateLimiter;
         this.postTrackingService = postTrackingService;
+        this.contentExtractor = contentExtractor;
     }
 
     public List<TumblrPostDTO> getNewPostsByTags(Set<String> tags) {
+
         if (tags == null || tags.isEmpty()) {
             log.debug("Теги не указаны, возвращаем пустой список");
             return Collections.emptyList();
         }
 
         log.info("Поиск постов по тегам: {}", tags);
-
-        // Используем Map для исключения дубликатов по ID
-        Map<String, TumblrPostDTO> allPostsMap = new HashMap<>();
+        Map<String, TumblrPostDTO> allPostsMap = new ConcurrentHashMap<>();
 
         for (String tag : tags) {
             try {
+                if (!rateLimiter.tryAcquire()) {
+                    log.warn("Достигнут лимит запросов, прерываем сбор постов");
+                    break;
+                }
                 List<TumblrPostDTO> postsForTag = getPostsByTag(tag);
                 for (TumblrPostDTO post : postsForTag) {
                     if (!cacheService.wasSent(post.getId())) {
                         allPostsMap.putIfAbsent(post.getId(), post);
                     }
                 }
+                log.debug("По тегу {} найдено {} новых постов", tag, postsForTag.size());
             } catch (Exception e) {
                 log.error("Ошибка при получении постов по тегу {}", tag, e);
             }
         }
-
         // Фильтруем только новые посты (которые еще не были отправлены)
         List<TumblrPostDTO> newPosts = allPostsMap.values().stream()
                 .filter(post -> post.getId() != null && !cacheService.wasSent(post.getId()))
@@ -112,22 +118,21 @@ public class TumblrService {
 
             Map<String, Object> options = new HashMap<>();
             options.put("limit", FETCH_LIMIT);
-            // filter: "text" - HTML, "raw" - без форматирования, "none" - без тела поста
-            // Используем "text" для получения HTML-контента
+            options.put("filter", "text");
 
             List<Post> posts = tumblrClient.tagged(tag, options);
-            log.debug("Получено {} постов из Tumblr API по тегу {}", posts.size(), tag);
+            log.debug("Получено {} постов по тегу {}", posts.size(), tag);
 
-            List<TumblrPostDTO> filteredPosts = posts.stream()
+            return posts.stream()
                     .map(this::convertToDTO)
                     .collect(Collectors.toList());
 
-            log.debug("После фильтрации осталось {} постов по тегу {}", filteredPosts.size(), tag);
-            return filteredPosts;
-
+        } catch (RequestNotPermitted r) {
+            log.warn("Рейт лимит превышен для тега {}", tag);
+            return Collections.emptyList();
         } catch (Exception e) {
             log.error("Ошибка при обращении к Tumblr API по тегу {}", tag, e);
-            return Collections.emptyList();
+            throw e; // Пробрасываем для CircuitBreaker
         }
     }
 
@@ -138,7 +143,6 @@ public class TumblrService {
         dto.setBlogName(post.getBlogName());
         dto.setPostURL(post.getPostUrl());
 
-        // Обработка timestamp
         if (post.getTimestamp() != null) {
             dto.setTimestamp(post.getTimestamp());
         }
@@ -148,12 +152,15 @@ public class TumblrService {
 
         // В зависимости от типа поста извлекаем разные данные
         switch (post.getType()) {
+
             case Post.PostType.TEXT:
                 TextPost textPost = (TextPost) post;
                 if (textPost.getBody() != null) {
+
                     dto.setBody(textPost.getBody());
-                    String imageUrl = extractImageFromHtml(textPost.getBody());
-                    String videoUrl = extractTumblrVideoFromHtml(textPost.getBody());
+                    String imageUrl = contentExtractor.extractFirstImageUrl(textPost.getBody());
+                    String videoUrl = contentExtractor.extractFirstVideoUrl(textPost.getBody());
+
                     if (imageUrl != null) {
                         dto.setPhotoUrl(imageUrl);
                     }
@@ -162,14 +169,17 @@ public class TumblrService {
                         dto.setVideoUrl(videoUrl);
                     }
                 }
+
                 if (textPost.getTitle() != null) {
                     dto.setSummary(textPost.getTitle());
                 }
                 break;
+
             case Post.PostType.PHOTO:
                 PhotoPost photoPost = (PhotoPost) post;
                 if (photoPost.getPhotos() != null && !photoPost.getPhotos().isEmpty()) {
-                    Photo photo = photoPost.getPhotos().get(0);
+
+                    Photo photo = photoPost.getPhotos().getFirst();
                     if (photo != null && photo.getOriginalSize() != null) {
                         dto.setPhotoUrl(photo.getOriginalSize().getUrl());
                     }
@@ -181,6 +191,26 @@ public class TumblrService {
                     dto.setSourceUrl(photoPost.getSourceUrl());
                 }
                 break;
+
+            case Post.PostType.VIDEO:
+                VideoPost videoPost = (VideoPost) post;
+                if (videoPost.getVideos() != null && !videoPost.getVideos().isEmpty()) {
+                    Video video = videoPost.getVideos().getFirst();
+                    if (video != null) {
+                        dto.setVideoUrl(video.getEmbedCode());
+                    }
+                }
+
+                if (videoPost.getCaption() != null) {
+                    dto.setSummary(videoPost.getCaption());
+                }
+
+                if (videoPost.getSourceUrl() != null) {
+                    dto.setSourceUrl(videoPost.getSourceUrl());
+                }
+
+                break;
+
             case Post.PostType.QUOTE:
                 QuotePost quotePost = (QuotePost) post;
                 if (quotePost.getText() != null) {
@@ -190,6 +220,7 @@ public class TumblrService {
                     dto.setSummary(quotePost.getSource());
                 }
                 break;
+
             case Post.PostType.LINK:
                 LinkPost linkPost = (LinkPost) post;
                 if (linkPost.getTitle() != null) {
@@ -202,65 +233,12 @@ public class TumblrService {
                     dto.setSourceUrl(linkPost.getLinkUrl());
                 }
                 break;
+
             default:
                 dto.setSummary(post.getType() + " post");
                 break;
         }
-
         return dto;
-    }
-
-    private String extractImageFromHtml(String html) {
-        if (html == null || html.isEmpty()) {
-            return null;
-        }
-        
-        // Ищем img теги с src атрибутом
-        Pattern pattern = Pattern.compile(
-            "<img[^>]+src=[\"']([^\"']+)[\"'][^>]*>",
-            Pattern.CASE_INSENSITIVE
-        );
-        Matcher matcher = pattern.matcher(html);
-        
-        if (matcher.find()) {
-            String imageUrl = matcher.group(1);
-            // Проверяем, что это валидный URL изображения
-            if (imageUrl != null && 
-                (imageUrl.startsWith("http://") || imageUrl.startsWith("https://")) &&
-                (imageUrl.contains("media.tumblr.com") || 
-                 imageUrl.matches(".*\\.(jpg|jpeg|png|gif|bmp|webp)(\\?.*)?$"))) {
-                return imageUrl;
-            }
-        }
-        
-        return null;
-    }
-
-    private String extractTumblrVideoFromHtml(String html) {
-        if (html == null || html.isEmpty()) {
-            return null;
-        }
-
-        // Сначала ищем в тегах video
-        Pattern pattern = Pattern.compile(
-                "<video[^>]+src=[\"']([^\"']+)[\"'][^>]*>",
-                Pattern.CASE_INSENSITIVE
-        );
-        Matcher matcher = pattern.matcher(html);
-
-        if (matcher.find()) {
-            String videoUrl = matcher.group(1);
-            // Проверяем, что это валидный URL видео с Tumblr
-            if (videoUrl != null &&
-                    (videoUrl.startsWith("http://") || videoUrl.startsWith("https://")) &&
-                    (videoUrl.contains("media.tumblr.com") ||
-                            videoUrl.contains("video.tumblr.com") ||
-                            videoUrl.matches(".*\\.(mp4|webm|mov)(\\?.*)?$"))) {
-                return videoUrl;
-            }
-        }
-
-        return null;
     }
 
     private List<TumblrPostDTO> fallbackGetPosts(String tag, Exception e) {
